Fixed menu overflow on x-axis

--- a/css/pages/product.css
+++ b/css/pages/product.css
@@ -51,12 +51,6 @@ h1 {
   font-weight: 700;
 }
 
-/*add to cart button*/
-.button-container input {
-  display: block;
-  width: 100%;
-}
-
 table {
   width: 100%;
 }
